@@ -3567,6 +3567,11 @@ int32_t readrules(PACKFILE *f, zquestheader *Header, bool keepdata)
 		set_bit(quest_rules,qr_MANHANDLA_BLOCK_SFX,1);
 	}
 	
+	if(compatrule_version < 22)
+	{
+		set_bit(quest_rules,qr_BROKEN_KEEPOLD_FLAG,1);
+	}
+	
 	//always set
 	set_bit(quest_rules,qr_ANIMATECUSTOMWEAPONS,0);
 	if (s_version < 16) set_bit(quest_rules,qr_BROKEN_HORIZONTAL_WEAPON_ANIM,1);
